--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	-->
 	<title>Website Development Project</title>
 <body>
-	<a href="/shotgunsam41.github.io/biography.html">My biography</a>
+	<a href="https://shotgunsam419.github.io/shotgunsam41.github.io/biography.html">My biography</a>
 </body>
 
 </html>
