--- a/biography/index.html
+++ b/biography/index.html
@@ -8,7 +8,7 @@
 	-->
 	<title>Website Development Project</title>
 <body>
-	<a href="/biography.html">My biography</a>
+	<a href="/biography">My biography</a>
 </body>
 
 </html>
