--- a/biography/index.html
+++ b/biography/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<!-- 
-	Website Final
+	Website Final - Biography
 	Jason Dhillon
 	12/10/16	
 	-->
-	<title>Website Development Project</title>
+	<title>Biography</title>
 <body>
-	<a href="/biography">My biography</a>
+	<p>This is my biography</p>
 </body>
 
 </html>
