--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 	12/10/16	
 	-->
 	<title>Website Development Project</title>
+
+</head>
+
 <body>
-	<a href="/biography">My biography</a>
+	<nav display: inline>
+		<ul>
+			<li><a href="/biography">My biography</a></li>
+			<li><a href="/resume">My Resume</a></li>
+			<li><a href="/food">My Favorite Food</a></li>
+			<li><a href="/music">My Music</a></li>
+			<li><a href="/pet">My Favorite Pet</a></li>
+		</ul>
+	</nav>
 </body>
 
 </html>
