Added Navigation Bar

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 	-->
 	<title>Website Development Project</title>
 
+<LINK href="css/index.css" rel="stylesheet" type="text/css">
+	
+</style>
 </head>
 
 <body>
-	<nav display: inline>
+
+	<nav >
 		<ul>
+			<li><h1>Jason Dhillon</li>
 			<li><a href="/biography">My biography</a></li>
 			<li><a href="/resume">My Resume</a></li>
 			<li><a href="/food">My Favorite Food</a></li>
