Uploading all pages except for Food

--- a/food/index.html
+++ b/food/index.html
@@ -7,8 +7,21 @@
 	12/10/16	
 	-->
 	<title>Food</title>
+<LINK href="../css/index.css" rel="stylesheet" type="text/css">
+</head>
+
 <body>
-	<p>This is my Food</p>
+			<ul>
+			<li><h1 style="padding-left: 40px">Jason Dhillon</li>
+			<li><a href="index.html">My biography</a></li>
+			<li><a href="/resume">My Resume</a></li>
+			<li><a href="/food">My Favorite Food</a></li>
+			<li><a href="/music">My Music</a></li>
+			<li><a href="/pet">My Favorite Pet</a></li>
+		</ul>
+
+		
+</body>
 </body>
 
 </html>
