Fixed not being able to go back to biography

--- a/music/index.html
+++ b/music/index.html
@@ -14,7 +14,7 @@
 <body>
 			<ul>
 			<li><h1 style="padding-left: 40px">Jason Dhillon</li>
-			<li><a href="index.html">My biography</a></li>
+			<li><a href="../index.html">My biography</a></li>
 			<li><a href="/resume">My Resume</a></li>
 			<li><a href="/food">My Favorite Food</a></li>
 			<li><a href="/music">My Music</a></li>
