--- a/food/index.html
+++ b/food/index.html
@@ -13,14 +13,14 @@
 <body>
 			<ul>
 			<li><h1 style="padding-left: 40px">Jason Dhillon</li>
-			<li><a href="index.html">My biography</a></li>
+			<li><a href="../index.html">My biography</a></li>
 			<li><a href="/resume">My Resume</a></li>
 			<li><a href="/food">My Favorite Food</a></li>
 			<li><a href="/music">My Music</a></li>
 			<li><a href="/pet">My Favorite Pet</a></li>
 		</ul>
 
-		
+
 </body>
 </body>
 
