--- a/music/index.html
+++ b/music/index.html
@@ -24,7 +24,7 @@
 		<center><embed src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/163548754&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"<iframe width="100%" height="450" scrolling="no" frameborder="no"</iframe></center>
 
 <h1 style="margin: 10px">Porter Robinson</h1>
-<p> My favorite music is EDM (Electronic Dance Music) and my favorite artist is Porter Robinson. Porter began producing music at the age of 12. In 2011 he signed with OWSLA, a new label that was directed by Skrillex. In 2012, he produced a single, "Language" that reached #1 on Beatport and the iTunes Dance Chart. He also cowrote "Clarity" with Zedd, and sang the backing vocals. Of all the songs that Porter Robinson has created, Divinity is my all time favorite. I am pleased to introduce Porter Robinson's "Divinity". Enjoy!<p>
+<p> My favorite music is EDM (Electronic Dance Music) and my favorite artist is Porter Robinson. Porter began producing music at the age of 12. In 2011 he signed with OWSLA, a new label that was directed by Skrillex. In 2012, he produced a single, "Language" that reached #1 on Beatport and the iTunes Dance Chart. He also co-wrote "Clarity" with Zedd, and sang the backing vocals. Of all the songs that Porter Robinson has created, Divinity is my all time favorite. I am pleased to introduce Porter Robinson's "Divinity". Enjoy!<p>
 </body>
 </body>
 
