Fixed Centering Issue

--- a/food/index.html
+++ b/food/index.html
@@ -20,7 +20,7 @@
 			<li><a href="/pet">My Favorite Pet</a></li>
 		</ul>
 
-<cemter><img src="cakepops.jpg" alt= "Picture of Cake Pops"></center>
+<center><img src="cakepops.jpg" alt= "Picture of Cake Pops"></center>
 <h1 style="margin: 10px">Cake Pops</h1>
 <p>Cake Pops are basically crushed up pieces of cake that you mix with frosting and then coat candy. They are delicious but very, very sweet!</p>
 
