--- a/pet/index.html
+++ b/pet/index.html
@@ -23,7 +23,7 @@
 <center><img src="tigger.JPG" height="720"" width="1000" alt="My cat, Tigger"></center>
 
 <h1 style="margin: 10px">Tigger</h1>
-<p>My favorite pet is my cat. His name is Tigger. My cat doesn't know any special tricks, other than eating and sleeping. I prefer Tigger, over my other cat, Sophie, because this is my cat, and Sophie is my brother's cat. I received Tigger as a Birthday present when I turning 14. He is a rescue cat that we picked up from Pet's Mart. We've had him for almost 7 years now. He doesn't like to be man-handled too much and much prefers to do things at his own pace.
+<p>My favorite pet is my cat. His name is Tigger. My cat doesn't know any special tricks, other than eating and sleeping. I prefer Tigger, over my other cat, Sophie, because this is my cat, and Sophie is my brother's cat. I received Tigger as a Birthday present when I turned 14. He is a rescue cat that we picked up from Pet's Mart. We've had him for almost 7 years now. He doesn't like to be man-handled too much and much prefers to do things at his own pace.
 </body>
 </body>
 
