Fixing overflow on mobile

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
 		preloadImages(["img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/logo.png", "img/menu.png", "img/main.jpg", "img/video.jpg"]);
 	</script>
+<div style="overflow-x: hidden">
 <!-- NavBar -->
 <div class="header">
 		<nav>
@@ -187,6 +188,6 @@
 		<li><a style="text-decoration: none;" href="https://www.instagram.com/flataddicted/"> <img src="img/instagram.svg" alt="" width="50px" height="50px"></li>
 		<li><a style="text-decoration: none;" href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="img/youtube.svg" alt="" width="50px" height="50px"></li>
 </footer>
-
+	</div>
 </body>
 </html>
