Test for mobile fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="css/home.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body style="position: fixed">
 	
 <noscript id="deferred-styles">
       <link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
@@ -46,7 +46,6 @@
 
 		preloadImages(["img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/logo.png", "img/menu.png", "img/main.jpg", "img/video.jpg"]);
 	</script>
-<div style="overflow-x: hidden">
 <!-- NavBar -->
 <div class="header">
 		<nav>
@@ -188,6 +187,5 @@
 		<li><a style="text-decoration: none;" href="https://www.instagram.com/flataddicted/"> <img src="img/instagram.svg" alt="" width="50px" height="50px"></li>
 		<li><a style="text-decoration: none;" href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="img/youtube.svg" alt="" width="50px" height="50px"></li>
 </footer>
-	</div>
 </body>
 </html>
