--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="css/home.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="position: fixed">
+<body>
 	
 <noscript id="deferred-styles">
       <link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
