--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 </div>
 
 <!--Video  width="700px" height="450px"-->
-<div style="position:relative; min-height:430px; max-height:600px; overflow: hidden; ">
-	<center><img src="img/video.jpg" width="100%" height="auto" class="video"></center>
+<div style=" width: 100%;
+ height:200px; background-image: url(img/video.jpg); background-repeat: no-repeat; background-size: cover;">
 </div>
 
 <!-- Fishing Blog -->
