Fixed Splash Screen

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Jason Dhillon
+		 1/23/17
+		 Test site for learning -->
 </head>
 <body>
 	
@@ -44,9 +45,9 @@
 			img.src = array[i];
 		    }
 		}
-
 		preloadImages(["img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/logo.png", "img/menu.png", "img/main.jpg", "img/video.jpg"]);
-	</script>
+</script>
+
 <!-- NavBar -->
 <div class="header">
 		<nav>
@@ -68,10 +69,11 @@
 	<div class="text-box">
 		<p class="imgtext" style="margin-top: 180px;">Orlando Fishing</p>
 		<p class="imgtext">Charters</p>
+		<br class="space"><br class="space"><br class="space"><br class="space">
 		<p class="imgsubtext">ONLY <b>$149 per person</b> For A Limited Time</p>
 		<button class="img">CALL TODAY</button>
 	</div>
-	<img class="main" src="img/main.jpg" max-width="100%" height="800;"  style=" display:block;"/>
+	<img class="main" src="img/main.jpg" width="100%"/>
 </div>
 
 <!-- Prices -->
@@ -119,21 +121,9 @@
 
 
 	<br>
-	<!--<table class="rates">
-
-		<tr>
-			<td><img src="img/3hour.jpg" width="100px" height="100px">
-			<td><img src="img/3hour.jpg" width="100px" height="100px">
-		</tr>
-		<tr>
-			<td><img src="img/3hour.jpg" width="100px" height="100px">
-			<td><img src="img/3hour.jpg" width="100px" height="100px">
-		</tr>
-
-		</table>-->
 </div>
 
-<!--Video  width="700px" height="450px"-->
+<!-- Video -->
 <div style=" width: 100%;
  height:200px; background-image: url(img/video.jpg); background-repeat: no-repeat; background-size: cover;">
 </div>
@@ -175,7 +165,11 @@
 		<hr>
 		<br>
 	</div>
-	<center><button style="border-color: dodgerblue; color: dodgerblue; padding:10px; border-radius: 2px; background-color: transparent;">MORE REPORTS</button></center>
+	<center><button style="border-color: dodgerblue; color: dodgerblue; padding:10px; border-radius: 2px; background-color: transparent; margin-bottom:20px;">MORE REPORTS</button></center>
+</div>
+
+<!-- Contact Form -->
+<div>
 </div>
 
 <!-- Footer -->
@@ -188,5 +182,6 @@
 		<li><a style="text-decoration: none;" href="https://www.instagram.com/flataddicted/"> <img src="img/instagram.svg" alt="" width="50px" height="50px"></li>
 		<li><a style="text-decoration: none;" href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="img/youtube.svg" alt="" width="50px" height="50px"></li>
 </footer>
+
 </body>
 </html>
