--- a/fishingreports/index.html
+++ b/fishingreports/index.html
@@ -1,23 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
-    <link href="../css/home.css" rel="stylesheet" type="text/css">
+	<!-- Jason Dhillon
+		 1/23/17
+		 Test site for learning -->
 </head>
 <body>
+	
+<noscript id="deferred-styles">
+      <link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
+	<link href="css/home.css" rel="stylesheet" type="text/css">
+    </noscript>
+    <script>
+      var loadDeferredStyles = function() {
+        var addStylesNode = document.getElementById("deferred-styles");
+        var replacement = document.createElement("div");
+        replacement.innerHTML = addStylesNode.textContent;
+        document.body.appendChild(replacement)
+        addStylesNode.parentElement.removeChild(addStylesNode);
+      };
+      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+          webkitRequestAnimationFrame || msRequestAnimationFrame;
+      if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
+      else window.addEventListener('load', loadDeferredStyles);
+    </script>
+	
+	<script>
+		function preloadImages(array) {
+		    if (!preloadImages.list) {
+			preloadImages.list = [];
+		    }
+		    var list = preloadImages.list;
+		    for (var i = 0; i < array.length; i++) {
+			var img = new Image();
+			img.onload = function() {
+			    var index = list.indexOf(this);
+			    if (index !== -1) {
+				// remove image from the array once it's loaded
+				// for memory consumption reasons
+				list.splice(index, 1);
+			    }
+			}
+			list.push(img);
+			img.src = array[i];
+		    }
+		}
+		preloadImages(["img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/logo.png", "img/menu.png", "img/main.jpg", "img/video.jpg"]);
+</script>
 
 <!-- NavBar -->
 <div class="header">
 		<nav>
-			<input class="nav_button" type="image" src="../img/menu.png" width="25px" height="20px"/>
+			<input class="nav_button" type="image" src="img/menu.png" width="25px" height="20px"/>
 			<ul class="header">
 				<li class="logo">
-					<img src="../img/logo.png"/></li>
-				<li class="header"><a class="header" href="../index.html">Home Page</a></li> 
-				<li class="header"><a class="header" href="../fishingreports/index.html">Fishing Reports</a></li>
-				<li class="header"><a class="header" href="../rates/index.html">Rates/Location</a></li>
-				<li class="header"><a class="header" href="../photogallery/index.html">Photo Gallery</a></li>
-				<li class="header"><a class="header" href="../testamonials/index.html">Testamonials</a></li>
+					<img src="img/logo.png"/></li>
+				<li class="header"><a class="header" href="index.html">Home Page</a></li> 
+				<li class="header"><a class="header" href="fishingreports/index.html">Fishing Reports</a></li>
+				<li class="header"><a class="header" href="rates/index.html">Rates/Location</a></li>
+				<li class="header"><a class="header" href="photogallery/index.html">Photo Gallery</a></li>
+				<li class="header"><a class="header" href="testamonials/index.html">Testamonials</a></li>
 			</ul>
 		</nav>
 </div>
@@ -27,10 +69,11 @@
 	<div class="text-box">
 		<p class="imgtext" style="margin-top: 180px;">Orlando Fishing</p>
 		<p class="imgtext">Charters</p>
+		<br class="space"><br class="space"><br class="space"><br class="space">
 		<p class="imgsubtext">ONLY <b>$149 per person</b> For A Limited Time</p>
 		<button class="img">CALL TODAY</button>
 	</div>
-	<img class="main" src="../img/main.jpg" max-width="100%" height="800;"  style=" display:block;"/>
+	<img class="main" src="img/main.jpg" width="100%"/>
 </div>
 
 <!-- Prices -->
@@ -41,22 +84,22 @@
 
 	<div style="display: inline;">
 		<figure>
-			<img src="../img/3hour.jpg" width="245px" height="163px">
+			<img src="img/3hour.jpg" width="245px" height="163px">
 			<figcaption>3 Hour Adventure</figcaption>
 			<figcaption class="subtext">Only $149</figcaption>
 		</figure>
 		<figure>
-			<img src="../img/5hour.jpg" width="245px" height="163px">
+			<img src="img/5hour.jpg" width="245px" height="163px">
 			<figcaption>5 Hour Adventure</figcaption>
 			<figcaption class="subtext">Only $179</figcaption>
 		</figure>
 		<figure>
-			<img src="../img/7hour.jpg" width="245px" height="163px">
+			<img src="img/7hour.jpg" width="245px" height="163px">
 			<figcaption>7 Hour Adventure</figcaption>
 			<figcaption class="subtext">Only $209</figcaption>
 		</figure>
 		<figure>
-			<img src="../img/9hour.jpg" width="245px" height="163px">
+			<img src="img/9hour.jpg" width="245px" height="163px">
 			<figcaption>9 Hour Adventure</figcaption>
 			<figcaption class="subtext">Only $239</figcaption>
 		</figure>
@@ -67,7 +110,7 @@
 <div class="bio">
 	<h1 style="text-transform: uppercase; letter-spacing: 5px;">Captain Tom Carver</h1>
 	<p style="text-transform: capitalize; color:gray; font-size: 18px;">US coast guard licensed and commercially insured</p>
-	<img class="bio" src="../img/aboutme.jpg" width="700px" height="450px">
+	<img class="bio" src="img/aboutme.jpg" width="700px" height="450px">
 	<p class="bio"><b>ORLANDO SALTWATER FISHING</b></p>
 	<p class="bio">Orlando Fishing Charters
 
@@ -78,26 +121,12 @@
 
 
 	<br>
-	<!--<table class="rates">
-
-		<tr>
-			<td><img src="img/3hour.jpg" width="100px" height="100px">
-			<td><img src="img/3hour.jpg" width="100px" height="100px">
-		</tr>
-		<tr>
-			<td><img src="img/3hour.jpg" width="100px" height="100px">
-			<td><img src="img/3hour.jpg" width="100px" height="100px">
-		</tr>
-
-		</table>-->
 </div>
 
-<!--Video  width="700px" height="450px"
-<div style="position:relative; min-height:430px; max-height:600px; overflow: hidden; ">
-	<center><img src="img/video.jpg" width="100%" height="auto" class="video"></center>
-</div>-->
-
-<div style=" width: 100%; height:200px; background-image: url(../img/video.jpg); background-repeat: no-repeat; background-size: cover;"></div>
+<!-- Video -->
+<div style=" width: 100%;
+ height:200px; background-image: url(img/video.jpg); background-repeat: no-repeat; background-size: cover;">
+</div>
 
 <!-- Fishing Blog -->
 <div class="blog">
@@ -136,18 +165,22 @@
 		<hr>
 		<br>
 	</div>
-	<center><button style="border-color: dodgerblue; color: dodgerblue; padding:10px; border-radius: 2px; background-color: transparent;">MORE REPORTS</button></center>
+	<center><button style="border-color: dodgerblue; color: dodgerblue; padding:10px; border-radius: 2px; background-color: transparent; margin-bottom:20px;">MORE REPORTS</button></center>
+</div>
+
+<!-- Contact Form -->
+<div>
 </div>
 
 <!-- Footer -->
 <footer>
 	<p class="footer">THE SOCIAL THING</p>
 	<ul class="footer">
-		<li><a style="text-decoration: none;" href="https://www.facebook.com/Flataddicted"> <img src="../img/facebook.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://twitter.com/flataddicted"> <img src="../img/twitter.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://plus.google.com/+TomCarver"> <img src="../img/googleplus.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://www.instagram.com/flataddicted/"> <img src="../img/instagram.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="../img/youtube.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://www.facebook.com/Flataddicted"> <img src="img/facebook.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://twitter.com/flataddicted"> <img src="img/twitter.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://plus.google.com/+TomCarver"> <img src="img/googleplus.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://www.instagram.com/flataddicted/"> <img src="img/instagram.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="img/youtube.svg" alt="" width="50px" height="50px"></li>
 </footer>
 
 </body>
