--- a/rates/index.html
+++ b/rates/index.html
@@ -1,62 +1,186 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
-    <link href="../css/home.css" rel="stylesheet" type="text/css">
+	<!-- Jason Dhillon
+		 1/23/17
+		 Test site for learning -->
 </head>
 <body>
+	
+<noscript id="deferred-styles">
+      <link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
+	<link href="css/home.css" rel="stylesheet" type="text/css">
+    </noscript>
+    <script>
+      var loadDeferredStyles = function() {
+        var addStylesNode = document.getElementById("deferred-styles");
+        var replacement = document.createElement("div");
+        replacement.innerHTML = addStylesNode.textContent;
+        document.body.appendChild(replacement)
+        addStylesNode.parentElement.removeChild(addStylesNode);
+      };
+      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
+          webkitRequestAnimationFrame || msRequestAnimationFrame;
+      if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
+      else window.addEventListener('load', loadDeferredStyles);
+    </script>
+	
+	<script>
+		function preloadImages(array) {
+		    if (!preloadImages.list) {
+			preloadImages.list = [];
+		    }
+		    var list = preloadImages.list;
+		    for (var i = 0; i < array.length; i++) {
+			var img = new Image();
+			img.onload = function() {
+			    var index = list.indexOf(this);
+			    if (index !== -1) {
+				// remove image from the array once it's loaded
+				// for memory consumption reasons
+				list.splice(index, 1);
+			    }
+			}
+			list.push(img);
+			img.src = array[i];
+		    }
+		}
+		preloadImages(["img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/logo.png", "img/menu.png", "img/main.jpg", "img/video.jpg"]);
+</script>
 
 <!-- NavBar -->
 <div class="header">
 		<nav>
-			<input class="nav_button" type="image" src="../img/menu.png" width="25px" height="20px"/>
+			<input class="nav_button" type="image" src="img/menu.png" width="25px" height="20px"/>
 			<ul class="header">
 				<li class="logo">
-					<img src="../img/logo.png"/></li>
-				<li class="header"><a class="header" href="../index.html">Home Page</a></li> 
-				<li class="header"><a class="header" href="../fishingreports/index.html">Fishing Reports</a></li>
-				<li class="header"><a class="header" href="../rates/index.html">Rates/Location</a></li>
-				<li class="header"><a class="header" href="../photogallery/index.html">Photo Gallery</a></li>
-				<li class="header"><a class="header" href="../testamonials/index.html">Testamonials</a></li>
+					<img src="img/logo.png"/></li>
+				<li class="header"><a class="header" href="index.html">Home Page</a></li> 
+				<li class="header"><a class="header" href="fishingreports/index.html">Fishing Reports</a></li>
+				<li class="header"><a class="header" href="rates/index.html">Rates/Location</a></li>
+				<li class="header"><a class="header" href="photogallery/index.html">Photo Gallery</a></li>
+				<li class="header"><a class="header" href="testamonials/index.html">Testamonials</a></li>
 			</ul>
 		</nav>
 </div>
 
+<!-- Splash Screen -->
+<div class="test">
+	<div class="text-box">
+		<p class="imgtext" style="margin-top: 180px;">Orlando Fishing</p>
+		<p class="imgtext">Charters</p>
+		<br class="space"><br class="space"><br class="space"><br class="space">
+		<p class="imgsubtext">ONLY <b>$149 per person</b> For A Limited Time</p>
+		<button class="img">CALL TODAY</button>
+	</div>
+	<img class="main" src="img/main.jpg" width="100%"/>
+</div>
 
-<!-- Google Maps -->
-<!-- {"address":
-"1103 Garden St. Titusville FL, 32796",
-"zoom":12,
-"scrollZoom":true,
-"draggable":true,
-"disableUi":false,
-"keepCentered":true,
-"markerIcon":"",
-"markersDraggable":false,
-"markerAtCenter":true,
-"markerInfoDisplay":"click",
-"markerInfoMultiple":true,
-"markerPositions":[],
-"mapName":"",
-"mapStyles":"",
-"directions":{"origin":"Walt Disney World Resort, Orlando, FL 32830",
-"destination":"425 Garden St. Titusville FL, 32796",
-"travelMode":"driving",
-"waypoints":[{"location":"Universal Studios 6000 Universal Blvd, Orlando, FL 32819","stopover":true},
-{"location":"Orange County Convention Center 9400 Universal Blvd, Orlando, FL 32819","stopover":true},
-{"location":"Orlando International Airport 1 Jeff Fuqua Blvd, Orlando, FL 32827","stopover":true}],
-"optimizeWaypoints":true,"soFieldContainerState":"closed","avoidHighways":false,"avoidTolls":false},
-"apiKey":""}-->
-<iframe src="https://www.google.com/maps?q=Randall Miller %26 Associates 300 E Broadway, Logansport, IN 46947&output=embed"></iframe>
+<!-- Prices -->
+<div class="prices">
+	<p class="fishtype" style="padding: 30px">REDFISH - TARPON - SEA TROUT - SNOOK</p>
+	<h1 class="fish">MOSQUITO LAGOON</h1>
+	<p style="padding: 30px">Just 45 minutes <b>From Orlando Florida</b> and all the major theme parks</p>
+
+	<div style="display: inline;">
+		<figure>
+			<img src="img/3hour.jpg" width="245px" height="163px">
+			<figcaption>3 Hour Adventure</figcaption>
+			<figcaption class="subtext">Only $149</figcaption>
+		</figure>
+		<figure>
+			<img src="img/5hour.jpg" width="245px" height="163px">
+			<figcaption>5 Hour Adventure</figcaption>
+			<figcaption class="subtext">Only $179</figcaption>
+		</figure>
+		<figure>
+			<img src="img/7hour.jpg" width="245px" height="163px">
+			<figcaption>7 Hour Adventure</figcaption>
+			<figcaption class="subtext">Only $209</figcaption>
+		</figure>
+		<figure>
+			<img src="img/9hour.jpg" width="245px" height="163px">
+			<figcaption>9 Hour Adventure</figcaption>
+			<figcaption class="subtext">Only $239</figcaption>
+		</figure>
+	</div>
+</div>
+
+<!-- Bio -->
+<div class="bio">
+	<h1 style="text-transform: uppercase; letter-spacing: 5px;">Captain Tom Carver</h1>
+	<p style="text-transform: capitalize; color:gray; font-size: 18px;">US coast guard licensed and commercially insured</p>
+	<img class="bio" src="img/aboutme.jpg" width="700px" height="450px">
+	<p class="bio"><b>ORLANDO SALTWATER FISHING</b></p>
+	<p class="bio">Orlando Fishing Charters
+
+	 are just a short drive from the area attractions, visitors can find some of the best fishing in the state, not to mention the best Red fishing in the World. This area of Central Florida offers both beginners and expert anglers the opportunity to catch record sized
+		Redfish, Sea Trout, Snook, Tarpon and more. You’re sure to see “tailing” Redfish, Snook hiding in mangroves, rolling Tarpon, Sea Trout, as well as Dolphins, Manatees and many other animals in their natural environment. Redfish, one of the more popular fish species in the area, and one that most anglers and fishing guides target. They are exceptional fighters and can be caught year round. Also known as Red Drum, these fish can exceed forty plus pounds during the summer when they gather and spawn. During the winter months, Redfish catches normally run in the three to twelve pound range. Fishing guides can catch numerous Redfish per charter, and stories of one hundred Redfish per day is not unheard of. The crystal clear, gin like color of the water during the winter makes sight fishing, and finding fish much easier for the trained and untrained eye. Flataddicted will give both beginners and expert anglers an opportunity to sight cast in shallow waters to all the area has to offer. Fishing the waters near Orlando are the best-kept secrets in the shallow water fishing arena. Whether you are in town for a vacation or a convention this is a one-of-a-kind experience you are sure to never forget. By booking a trip with Flataddicted, we will make sure the trip is a success every time out. From a friendly voice on the phone to a full time guide on the water 250 days a year. Flataddicted is the best choice for your day out on the water. Flataddicted has been featured in many fishing magazines and numerous times on ESPN radio. Guided television celebrities and appeared on several nationally televised fishing shows. Make no mistake you have found the hardest working and most energetic guide on the water.</p>
+
+
+
+
+	<br>
+</div>
+
+<!-- Video -->
+<div style=" width: 100%;
+ height:200px; background-image: url(img/video.jpg); background-repeat: no-repeat; background-size: cover;">
+</div>
+
+<!-- Fishing Blog -->
+<div class="blog">
+	<h1>LATEST FISHING REPORTS</h1>
+	<p>Weekly Updates</p>
+	<br>
+	<hr style="width:80%;">
+	<div style="width: 80%; margin:auto;">
+		<h3>UNCATEGORIZED</h3>
+		<h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1>
+		<p style="text-align: left;">Incredible Tailing Redfish Action! Winter
+			 is that magical time of the year when Redfish
+			  really turn on and start offering pure sight
+			   casting opportunities. For the past 3 to …</p>
+	
+		<hr>
+	</div>
+	<div style="width: 80%; margin:auto;">
+		<h3>UNCATEGORIZED</h3>
+		<h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1>
+		<p style="text-align: left;"> Huge Mosquito Lagoon Red Fish
+			 are here in Florida once again and that means it’s
+			  time for the fall Mullet run. The Mullet run triggers
+			   a feeding frenzy for big …</p>
+	
+		<hr>
+	</div>
+	<div style="width: 80%; margin:auto;">
+		<h3>UNCATEGORIZED</h3>
+		<h1 style="text-align: left;">Orlando Fishing Trip</h1>
+		<p style="text-align: left;">Orlando fishing trips and
+			 guided fishing tours near orlando have been on a
+			  rise over the past few years. Vacationing families
+			   from around the globe have discovered phenomenal fishing just …</p>
+	
+		<hr>
+		<br>
+	</div>
+	<center><button style="border-color: dodgerblue; color: dodgerblue; padding:10px; border-radius: 2px; background-color: transparent; margin-bottom:20px;">MORE REPORTS</button></center>
+</div>
+
+<!-- Contact Form -->
+<div>
+</div>
+
 <!-- Footer -->
 <footer>
 	<p class="footer">THE SOCIAL THING</p>
 	<ul class="footer">
-		<li><a style="text-decoration: none;" href="https://www.facebook.com/Flataddicted"> <img src="../img/facebook.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://twitter.com/flataddicted"> <img src="../img/twitter.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://plus.google.com/+TomCarver"> <img src="../img/googleplus.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://www.instagram.com/flataddicted/"> <img src="../img/instagram.svg" alt="" width="50px" height="50px"></li>
-		<li><a style="text-decoration: none;" href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="../img/youtube.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://www.facebook.com/Flataddicted"> <img src="img/facebook.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://twitter.com/flataddicted"> <img src="img/twitter.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://plus.google.com/+TomCarver"> <img src="img/googleplus.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://www.instagram.com/flataddicted/"> <img src="img/instagram.svg" alt="" width="50px" height="50px"></li>
+		<li><a style="text-decoration: none;" href="https://www.youtube.com/channel/UCXz5g_fsJJOgfADpsXqn34Q"> <img src="img/youtube.svg" alt="" width="50px" height="50px"></li>
 </footer>
 
 </body>
