--- a/fishingreports/index.html
+++ b/fishingreports/index.html
@@ -66,13 +66,13 @@
 </div>
 
 <!-- Splash Screen -->
-<div class="test">
+<div class="splash">
 	<div class="text-box">
-		<p class="imgtext" style="margin-top: 180px;">Orlando Fishing</p>
-		<p class="imgtext">Charters</p>
+		<p class="splashtext" style="margin-top: 180px;">Orlando Fishing</p>
+		<p class="splashtext">Charters</p>
 		<br class="space"><br class="space"><br class="space"><br class="space">
-		<p class="imgsubtext">ONLY <b>$149 per person</b> For A Limited Time</p>
-		<button class="img">CALL TODAY</button>
+		<p class="splashsubtext">ONLY <b>$149 per person</b> For A Limited Time</p>
+		<button class="call"><a class="call" href="tel:1-407-432-5138">CALL TODAY</a></button>
 	</div>
 	<img class="main" src="img/main.jpg" width="100%"/>
 </div>
@@ -125,48 +125,100 @@
 </div>
 
 <!-- Video -->
-<div style=" width: 100%;
- height:200px; background-image: url(img/video.jpg); background-repeat: no-repeat; background-size: cover;">
+<div>
+	<center><iframe width="100%" height="400px" src="https://www.youtube.com/embed/OxSN03L93Co" frameborder="0" allowfullscreen></iframe></center>
 </div>
 
 <!-- Fishing Blog -->
-<div class="blog">
+<div>
 	<h1>LATEST FISHING REPORTS</h1>
 	<p>Weekly Updates</p>
 	<br>
-	<hr style="width:80%;">
-	<div style="width: 80%; margin:auto;">
-		<h3>UNCATEGORIZED</h3>
-		<h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1>
-		<p style="text-align: left;">Incredible Tailing Redfish Action! Winter
-			 is that magical time of the year when Redfish
-			  really turn on and start offering pure sight
-			   casting opportunities. For the past 3 to …</p>
-	
-		<hr>
-	</div>
-	<div style="width: 80%; margin:auto;">
-		<h3>UNCATEGORIZED</h3>
-		<h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1>
-		<p style="text-align: left;"> Huge Mosquito Lagoon Red Fish
-			 are here in Florida once again and that means it’s
-			  time for the fall Mullet run. The Mullet run triggers
-			   a feeding frenzy for big …</p>
-	
-		<hr>
-	</div>
-	<div style="width: 80%; margin:auto;">
-		<h3>UNCATEGORIZED</h3>
-		<h1 style="text-align: left;">Orlando Fishing Trip</h1>
-		<p style="text-align: left;">Orlando fishing trips and
-			 guided fishing tours near orlando have been on a
-			  rise over the past few years. Vacationing families
-			   from around the globe have discovered phenomenal fishing just …</p>
-	
-		<hr>
-		<br>
-	</div>
-	<center><button style="border-color: dodgerblue; color: dodgerblue; padding:10px; border-radius: 2px; background-color: transparent; margin-bottom:20px;">MORE REPORTS</button></center>
+
+	<table style="margin: auto; width:80%;">	
+		<tr>
+				<div class="blog">
+					<hr>
+					<td>
+						<img src="img/blog1.jpg" width="200px" height="150px;" style="padding: 20px" >
+					</td>
+					
+					<td>
+						<h3>UNCATEGORIZED</h3>
+						<h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1>
+						<p style="text-align: left;">Incredible Tailing Redfish Action! Winter
+							is that magical time of the year when Redfish
+							really turn on and start offering pure sight
+							casting opportunities. For the past 3 to …</p>
+						<br>
+					</td>
+				</div>
+		</tr>
+		
+		<tr>
+			<div class="blog">
+				<td colspan="2">
+					<hr>
+				</td>
+			</div>
+		</tr>
+
+		<tr>
+			<div class="blog">
+				<td>
+					<img src="img/blog2.jpg" width="200px" height="150px" style="padding: 20px">
+				</td>
+
+				<td>
+					<h3>UNCATEGORIZED</h3>
+					<h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1>
+					<p style="text-align: left;"> Huge Mosquito Lagoon Red Fish
+						are here in Florida once again and that means it’s
+						time for the fall Mullet run. The Mullet run triggers
+						a feeding frenzy for big …</p>
+					<br>
+				</td>
+				
+			</div>
+		</tr>
+
+		<tr>
+			<div class="blog">
+				<td colspan="2">
+					<hr>
+				</td>
+			</div>
+		</tr>
+
+		<tr>
+			<div class="blog">
+				<td>
+					<img src="img/blog3.jpg" width="200px" height="150px;" style="padding: 20px" >
+				</td>
+
+				<td>
+					<h3>UNCATEGORIZED</h3>
+					<h1 style="text-align: left;">Orlando Fishing Trip</h1>
+					<p style="text-align: left;">Orlando fishing trips and
+						guided fishing tours near orlando have been on a
+						rise over the past few years. Vacationing families
+						from around the globe have discovered phenomenal fishing just …</p>
+					<br>
+				</td>
+			</div>
+			
+		</tr>
+
+		<tr>
+			<div class="blog">
+				<td colspan="2">
+					<hr>
+				</td>
+			</div>
+		</tr>
+	</table>
+
+	<center><button class="moreReports"><a class="reports" href="/fishingreports/index.html">MORE REPORTS</a></button></center>
 </div>
 
 <!-- Contact Form -->
