--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 <noscript id="deferred-styles">
       <link href="https://fonts.googleapis.com/css?family=Oswald|Ubuntu" rel="stylesheet">
-	<link href="css/home.css" rel="stylesheet" type="text/css">
+	<link href="/css/home.css" rel="stylesheet" type="text/css">
     </noscript>
     <script>
       var loadDeferredStyles = function() {
