--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		 1/23/17
 		 Test site for learning -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	      
+	<link href="/css/home.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	
