--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			img.src = array[i];
 		    }
 		}
-		preloadImages(["img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/logo.png", "img/menu.png", "img/main.jpg", "img/video.jpg"]);
+		preloadImages([ "img/main.jpg", "img/logo.png", "img/3hour.jpg", "img/5hour.jpg", "img/7hour.jpg", "img/9hour.jpg", "img/aboutme.jpg", "img/facebook.svg", "img/twitter.svg", "img/googleplus.svg", "img/instagram.svg", "img/youtube.svg", "img/menu.png", "img/video.jpg"]);
 </script>
 
 <!-- NavBar -->
