Fixed padding blogs

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 	<br>
 				<div class="blog">
 					<hr>
-						<img src="img/blog1.jpg" width="100%" height="auto;" style="padding: 20px; margin: auto;" >
+						<img src="img/blog1.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
 						<h3>UNCATEGORIZED</h3>
 						<h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1>
 						<p style="text-align: left;">Incredible Tailing Redfish Action! Winter
@@ -409,7 +409,7 @@
 
 			<div class="blog">
 					<hr>
-					<img src="img/blog2.jpg" width="100%" height="auto;" style="padding: 20px; margin: auto;" >
+					<img src="img/blog2.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
 					<h3>UNCATEGORIZED</h3>
 					<h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1>
 					<p style="text-align: left;"> Huge Mosquito Lagoon Red Fish
@@ -422,7 +422,7 @@
 
 			<div class="blog">
 					<hr>
-					<img src="img/blog3.jpg" width="100%" height="auto;" style="padding: 20px; margin: auto;" >
+					<img src="img/blog3.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
 					<h3>UNCATEGORIZED</h3>
 					<h1 style="text-align: left;">Orlando Fishing Trip</h1>
 					<p style="text-align: left;">Orlando fishing trips and
