--- a/fishingreports/blog1.html
+++ b/fishingreports/blog1.html
@@ -5,13 +5,13 @@
 		 1/23/17
 		 Test site for learning -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="../css/blog.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
 <div>
 	<noscript id="deferred-styles">
       	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-		<link href="../css/blog.css" rel="stylesheet" type="text/css">
     </noscript>
 
     <script>
@@ -46,38 +46,27 @@
 </div>
 
 <!-- Blog -->
-<div style="margin: 100px 20px;">
-	<h1 style="text-align: left"> Orlando Florida Fishing Charters</h1>
-	<h3 style="text-align: left">POSTED ON JANUARY 29, 2017 BY FLATADDICTED</h3>
+<div style="margin: 150px 20px;">
+	<h1>Incredible Tailing Redfish Action!</h1>
+	<h3>POSTED ON December 2, 2016 BY FLATADDICTED</h3>
 	<hr><br>
 
-	<img src="../img/blog0-0.jpg" width="100%"  style="padding:20px;">
+	<center><img class="photo" src="../img/blog1.jpg">
+	<img class="photo" src="../img/blog1_2.jpg">
+	<img class="photo" src="../img/blog1_3.jpg">
 	
-	<p><b>January 29th 2017 - Orlando Fishing Charters</b> and fishing trips
-	 near the Mosquito Lagoon have been targeting huge black drum this past week.
-	  This time of the year it’s extremely productive for the Black Drum on the flats.
-	   Visitors to Orlando Florida are only a short drive to the world famous Mosquito
-	    Lagoon where the best Black Drum fishing can be found. The Drum are holding in
-		 huge schools along the 3 foot depth that we can sight cast to with Live Shrimp
-		  and Blue Crabs. The best gear for the job (7 foot Med. Spinning Rod) on a 3000
-		   to 4000 reel.</p>
-	<p>Fishing in the Orlando area during the winter months also hosts species like Red Fish
-		 and Sea Trout. The Red fishing this past month has been average with most fish in
-		  the 4 to 8 pound range and Sea Trout in the 2 to 4 pound range. Redfish are eating
-		   live shrimp and gold spoons while the Sea Trout like the top water and swim baits.
-		    Redfish like the shallower water… 1 to 2 feet and Sea Trout in the 2 to 3 foot 
-			range.</p>
-	<p>February is just getting started and it’s looking like a very good month for flats fishing. 
-		The water is slowly getting cleaner this year unlike last year when the unnaturally warmer 
-		temps set in. With the cooler temps we are now getting it’s producing some epic sight casting 
-		conditions. Book a trips while the new prices last before the Spring rates kick in. You can pre 
-		pay now to lock in the Winter Rate for a Spring or even a Summer fishing trip.</p>
+	<h3><u><b>Incredible Tailing Redfish Action!</u></b></h3>
+	<p>Winter is that magical time of the year when Redfish really turn on and start offering pure sight casting opportunities. For the past 3 to 5 tailing red fishing and sight casting has truly turned on in the Mosquito Lagoon. Many years ago we all feared a windy day on the flats and didn't even expect to see a tailing redfish on these days. Typically the best sight fishing came on the slick calm mornings with near perfect conditions. Thankfully (I have no idea as to why) that has all change. This month has kicked off the return of the windy tailing redfish conditions and so far so good. The schools are still fairly small with only 10 to 20 fish on average. However when you cast a live shrimp directly into the group it only takes a few seconds before they explode on it.</p>
 	
-	<p>I hope your new year is going well… Let’s Go Fishing!</p>
-	<img src="../img/blog0-1.jpg" width="100%" >
-	<img src="../img/blog0-2.jpg" width="100%">
-
-
+	<h3><u><b>What to expect in December</u></b></h3>
+	<p>Red fishing in the month of December can be extremely exciting. Some of my favorite methods for catching redfish this month will be using spinning gear with gold spoons and live shrimp. When it comes to soft plastic baits I tend to go with shrimp and baitfish patterns. My favorite colors are brown or rootbeer colors.
+	<br>
+	This past week I have concentrated mostly on using live shrimp. Some trips were using popping corks with the shrimp rigged 1 - 2 feet below slowly working them across the shallow flats. On the days when we find tailing redfish I'm going with nothing more than a 3/0 circle hook and casting the weightless shrimp onto the school. When I'm not seeing active signs of red fish, the gold spoons are a great way to cover lots of water.
+	<br>
+	I don't want to sound like a typical salesman... but December is one of the most popular months in the state of Florida with vacationers and tourists from around the world. The main reason is Disney quite simply is the second most popular Christmas destination on our globe and it only takes a few phone calls on a few good days to fill the books. From December 15th until around the first week of January it will get extremely busy if you're interested in booking a fishing trip please don't hesitate by calling or emailing me for more information or to book a fishing trip. I look forward to fishing with you thank you for stopping by my website I hope you have a great day.
+	</p>
+	</center>
+</div>
 <!-- Contact Form -->
 <div style="padding-top: 50px; background-color: #f7faff;">
 	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h4>
@@ -87,7 +76,7 @@
 	<br><br><br>
 	
 
-	<table>
+	<center><table>
 		<tr>
 			<td>
 				<form action="mail.php" method="post">
@@ -125,8 +114,7 @@
 			</td>
 		</tr>
 
-	</table>
-</div>
+	</table></center>
 </div>
 
 <!-- Footer -->
