--- a/fishingreports/blog0.html
+++ b/fishingreports/blog0.html
@@ -5,13 +5,13 @@
 		 1/23/17
 		 Test site for learning -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="../css/blog.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
 <div>
 	<noscript id="deferred-styles">
       	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-		<link href="../css/blog.css" rel="stylesheet" type="text/css">
     </noscript>
 
     <script>
@@ -46,14 +46,14 @@
 </div>
 
 <!-- Blog -->
-<div style="margin: 100px 20px;">
+<div style="margin: 150px 20px;">
 	<h1 style="text-align: left"> Orlando Florida Fishing Charters</h1>
 	<h3 style="text-align: left">POSTED ON JANUARY 29, 2017 BY FLATADDICTED</h3>
 	<hr><br>
 
-	<center><img src="../img/blog0-0.jpg"  max-height="800px" style="padding:20px;">
+	<img class="photo" src="../img/blog0-0.jpg">
 	
-	<p style="max-width:1500px"><b>January 29th 2017 - Orlando Fishing Charters</b> and fishing trips
+	<p><b>January 29th 2017 - Orlando Fishing Charters</b> and fishing trips
 	 near the Mosquito Lagoon have been targeting huge black drum this past week.
 	  This time of the year it’s extremely productive for the Black Drum on the flats.
 	   Visitors to Orlando Florida are only a short drive to the world famous Mosquito
@@ -61,25 +61,25 @@
 		 huge schools along the 3 foot depth that we can sight cast to with Live Shrimp
 		  and Blue Crabs. The best gear for the job (7 foot Med. Spinning Rod) on a 3000
 		   to 4000 reel.</p>
-	<p style="max-width:1500px">Fishing in the Orlando area during the winter months also hosts species like Red Fish
+	<p>Fishing in the Orlando area during the winter months also hosts species like Red Fish
 		 and Sea Trout. The Red fishing this past month has been average with most fish in
 		  the 4 to 8 pound range and Sea Trout in the 2 to 4 pound range. Redfish are eating
 		   live shrimp and gold spoons while the Sea Trout like the top water and swim baits.
-		    Redfish like the shallower water… 1 to 2 feet and Sea Trout in the 2 to 3 foot 
+		    Redfish like the shallower water... 1 to 2 feet and Sea Trout in the 2 to 3 foot 
 			range.</p>
-	<p style="max-width:1500px">February is just getting started and it’s looking like a very good month for flats fishing. 
+	<p>February is just getting started and it’s looking like a very good month for flats fishing. 
 		The water is slowly getting cleaner this year unlike last year when the unnaturally warmer 
 		temps set in. With the cooler temps we are now getting it’s producing some epic sight casting 
 		conditions. Book a trips while the new prices last before the Spring rates kick in. You can pre 
 		pay now to lock in the Winter Rate for a Spring or even a Summer fishing trip.</p>
 	
-	<p style="max-width:1500px">I hope your new year is going well… Let’s Go Fishing!</p>
-	<img src="../img/blog0-1.jpg"   max-height="800px"  >
-	<img src="../img/blog0-2.jpg"   max-height="800px" >
-	</center>
+	<p>I hope your new year is going well... Let's Go Fishing!</p>
+	<img class="photo" src="../img/blog0-1.jpg">
+	<img class="photo" src="../img/blog0-2.jpg">
+</div>
 
 <!-- Contact Form -->
-<div style="padding-top: 50px; background-color: #f7faff;">
+<div style="padding-top: 50px; width:100%;  background-color: #f7faff;">
 	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h4>
 	<h1 style="letter-spacing: 3px">CONTACT ME ANY TIME</h1>
 	<br>
@@ -87,7 +87,7 @@
 	<br><br><br>
 	
 
-	<table>
+	<center><table>
 		<tr>
 			<td>
 				<form action="mail.php" method="post">
@@ -125,7 +125,7 @@
 			</td>
 		</tr>
 
-	</table>
+	</table></center>
 </div>
 </div>
 
