--- a/index.html
+++ b/index.html
@@ -654,9 +654,9 @@
 				
 			<td id="normalblog"style="padding-right: 100px; padding-top:50px; float: right;">
 					<h4>Monday through Sunday open 6am to 10pm</h4>
-					<h4><img id="icon" src="img/location.png">1103 Garden ST. Titusville FL, 32796</h4>
-					<h4><img id="icon" src="img/phone.png">1-407-432-5138</h4>
-					<h4><img id="icon" src="img/mail.png"><a style="text-decoration: underline; color:dodgerblue" href="mailto:flataddicted@gmail.com">flataddicted@gmail.com</a></h4>
+					<h4><img id="icon" src="img/location2.png">1103 Garden ST. Titusville FL, 32796</h4>
+					<h4><img id="icon" src="img/phone2.png">1-407-432-5138</h4>
+					<h4><img id="icon" src="img/mail2.png"><a style="text-decoration: underline; color:dodgerblue" href="mailto:flataddicted@gmail.com">flataddicted@gmail.com</a></h4>
 			</td>
 		</tr>
 
