--- a/fishingreports/blog0.html
+++ b/fishingreports/blog0.html
@@ -51,7 +51,7 @@
 	<h3 style="text-align: left">POSTED ON JANUARY 29, 2017 BY FLATADDICTED</h3>
 	<hr><br>
 
-	<img class="photo" src="../img/blog0-0.jpg">
+	<center><img class="photo" src="../img/blog0-0.jpg"></center>
 	
 	<p><b>January 29th 2017 - Orlando Fishing Charters</b> and fishing trips
 	 near the Mosquito Lagoon have been targeting huge black drum this past week.
@@ -74,8 +74,8 @@
 		pay now to lock in the Winter Rate for a Spring or even a Summer fishing trip.</p>
 	
 	<p>I hope your new year is going well... Let's Go Fishing!</p>
-	<img class="photo" src="../img/blog0-1.jpg">
-	<img class="photo" src="../img/blog0-2.jpg">
+	<center><img class="photo" src="../img/blog0-1.jpg">
+		<img class="photo" src="../img/blog0-2.jpg"></center>
 </div>
 
 <!-- Contact Form -->
