--- a/fishingreports/blog1.html
+++ b/fishingreports/blog1.html
@@ -47,8 +47,8 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
-	<h1>Incredible Tailing Redfish Action!</h1>
-	<h3>POSTED ON December 2, 2016 BY FLATADDICTED</h3>
+	<h1 style="text-align: left">Incredible Tailing Redfish Action!</h1>
+	<h3 style="text-align: left">POSTED ON December 2, 2016 BY FLATADDICTED</h3>
 	<hr><br>
 
 	<center><img class="photo" src="../img/blog1.jpg">
